fixed logo size on mobile

--- a/tasa_website/static/css/tasa.css
+++ b/tasa_website/static/css/tasa.css
@@ -143,7 +143,8 @@ body {
 	}
 
 	.logo {
-		width: 7em; 
+		width: 10em;
+        height: 10em;
 		opacity: .6;
 		-webkit-box-ordinal-group: 2;
 		-webkit-order: 1;
